[gd_scene load_steps=16 format=3 uid="uid://x4da16jm3agp"]

[ext_resource type="Script" uid="uid://b6tjlrlkcna4c" path="res://scripts/game.gd" id="1_iywne"]
[ext_resource type="PackedScene" uid="uid://5xrxmqd7hh7p" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://dc81d82jqxilb" path="res://scenes/World-Map.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://uh1iamq7cu80" path="res://scenes/kill_zone.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bq20wc8tnm6ep" path="res://scenes/bad_ninja.tscn" id="4_lbhrr"]
[ext_resource type="Script" uid="uid://lfp0ley61n8r" path="res://scripts/ui.gd" id="6_p57ef"]
[ext_resource type="FontFile" uid="uid://brubogpyre5x2" path="res://assets/ThaleahFat.ttf" id="7_gee14"]
[ext_resource type="AudioStream" uid="uid://c1ln5u7cg3wmc" path="res://assets/222551__zagi2__koto-loop.ogg" id="8_gee14"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lbhrr"]
distance = -11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(670, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gee14"]
size = Vector2(89, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tnpc"]
size = Vector2(65, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtaks"]
size = Vector2(127, 74.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvpfn"]
size = Vector2(49, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dinhu"]
size = Vector2(20, 51)

[node name="Game" type="Node2D"]
script = ExtResource("1_iywne")
ninja_scene = ExtResource("4_lbhrr")

[node name="Player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(14, 465)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(2, -14)
zoom = Vector2(2, 2)
limit_bottom = 666
position_smoothing_enabled = true

[node name="World-Map" parent="." instance=ExtResource("2_yqjtg")]

[node name="KillZone" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(122, 768)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(-3, 0)
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="EnemySpawn1" type="Marker2D" parent="."]
position = Vector2(1309, -52)

[node name="EnemySpawn2" type="Marker2D" parent="."]
position = Vector2(878, -55)

[node name="EnemySpawn3" type="Marker2D" parent="."]
position = Vector2(1108, -56)

[node name="EnemySpawn4" type="Marker2D" parent="."]
position = Vector2(921, -56)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_p57ef")

[node name="Control" type="Control" parent="UI"]
layout_direction = 1
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="CurrentScore" type="RichTextLabel" parent="UI/Control"]
layout_mode = 0
offset_left = -266.0
offset_top = 10.0
offset_right = 71.0
offset_bottom = 47.0
theme_override_fonts/normal_font = ExtResource("7_gee14")
theme_override_font_sizes/normal_font_size = 32
text = "Current Score: "

[node name="HighScore" type="RichTextLabel" parent="UI/Control"]
layout_mode = 0
offset_left = -261.0
offset_top = 40.0
offset_right = 27.0
offset_bottom = 106.0
theme_override_fonts/normal_font = ExtResource("7_gee14")
theme_override_font_sizes/normal_font_size = 32
text = "High Score: "

[node name="WaveLeft" type="RichTextLabel" parent="UI/Control"]
layout_mode = 0
offset_left = -261.0
offset_top = 98.0
offset_right = -121.0
offset_bottom = 186.0
theme_override_fonts/normal_font = ExtResource("7_gee14")
theme_override_font_sizes/normal_font_size = 32
text = "Waves Left: "

[node name="Timer" type="RichTextLabel" parent="UI/Control"]
layout_mode = 0
offset_left = -1099.0
offset_top = 8.0
offset_right = -869.0
offset_bottom = 142.0
theme_override_fonts/normal_font = ExtResource("7_gee14")
theme_override_font_sizes/normal_font_size = 32
text = "Time:"

[node name="WaveArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaveArea"]
position = Vector2(1097, -48)
shape = SubResource("RectangleShape2D_p57ef")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1010.0
offset_top = -748.0
offset_right = 2372.0
offset_bottom = 1067.0
color = Color(0.169245, 0.169245, 0.169245, 1)

[node name="Muzic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gee14")
volume_db = -15.0
autoplay = true
playback_type = 1

[node name="Instructions" type="StaticBody2D" parent="."]
z_index = 2
z_as_relative = false

[node name="RichTextLabel" type="RichTextLabel" parent="Instructions"]
texture_filter = 1
texture_repeat = 1
offset_left = -51.0
offset_top = 427.0
offset_right = 351.0
offset_bottom = 579.0
theme_override_colors/default_color = Color(0.325452, 0.411366, 0.716366, 1)
theme_override_colors/font_selected_color = Color(0.59675, 0.0406655, 0.170736, 1)
theme_override_fonts/normal_font = ExtResource("7_gee14")
theme_override_font_sizes/normal_font_size = 16
text = "Instructions
Press A for Left movement
Press D for Right movement
Press Space for Jump
Press Q or E for Attack
Press Left Shift or Mouse Buttons
to switch Worlds

Have fun!!"
scroll_active = false
horizontal_alignment = 1

[node name="Label" type="Label" parent="Instructions"]
offset_left = 661.0
offset_top = 490.0
offset_right = 735.0
offset_bottom = 520.0
theme_override_colors/font_color = Color(0.32549, 0.411765, 0.717647, 1)
theme_override_fonts/font = ExtResource("7_gee14")
theme_override_font_sizes/font_size = 32
text = "GO UP"

[node name="Label3" type="Label" parent="Instructions"]
offset_left = 939.0
offset_top = 212.0
offset_right = 1013.0
offset_bottom = 242.0
theme_override_colors/font_color = Color(0.32549, 0.411765, 0.717647, 1)
theme_override_fonts/font = ExtResource("7_gee14")
theme_override_font_sizes/font_size = 32
text = "GO UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Instructions"]
offset_left = 204.0
offset_top = 133.0
offset_right = 342.0
offset_bottom = 163.0
theme_override_colors/font_color = Color(0.32549, 0.411765, 0.717647, 1)
theme_override_fonts/font = ExtResource("7_gee14")
theme_override_font_sizes/font_size = 32
text = "GO RIGHT ->"

[node name="KillZone2" parent="." instance=ExtResource("3_lnu2h")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone2"]
position = Vector2(407, 595)
shape = SubResource("RectangleShape2D_gee14")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillZone2"]
position = Vector2(536, 603.5)
shape = SubResource("RectangleShape2D_0tnpc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KillZone2"]
position = Vector2(169, 374.375)
shape = SubResource("RectangleShape2D_vtaks")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="KillZone2"]
position = Vector2(121.5, 324)
shape = SubResource("RectangleShape2D_kvpfn")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="KillZone2"]
position = Vector2(71, 266)
shape = SubResource("RectangleShape2D_dinhu")

[connection signal="area_entered" from="WaveArea" to="." method="_on_wave_area_area_entered"]
